# session-lattice

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.coily/: coily.yaml
docs/: FEATURES.md  architecture.md  decisions.md
session_lattice/: __init__.py
stack/: README.md  docker-compose.yaml
